--- a/sway/front-end/public/index.html
+++ b/sway/front-end/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="../src/assets/Favicon 1.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>GA-LDN React Template</title>
+    <title>Sway</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
