--- a/sway/front-end/public/index.html
+++ b/sway/front-end/public/index.html
@@ -5,6 +5,13 @@
     <link rel="icon" href="../src/assets/Favicon 1.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Sway</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
