--- a/sway/front-end/public/index.html
+++ b/sway/front-end/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="../src/assets/Favicon 1.svg" />
+    <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Sway</title>
     <link
